k8s-related/persistance/hostpath/spring-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
      - name: spring-app
        image: 69966/springgradleimg:1.1.1
        ports:
        - containerPort: 8080
        volumeMounts: 
          - name: my-vol
            mountPath: /app/src/main/resources/images
      volumes: 
        - name: my-vol
          hostPath: 
            path: /var/images
