k8s-related/persistance/hostpath/spring-ingress.yaml
# one ingress , two domain names
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: nginx
  tls: 
    - hosts: 
      - ingress-image-uploader2.devnerd.store
      secretName: ingress-spring-tls-2
  rules:
  - host: ingress-image-uploader2.devnerd.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: spring-svc
            port: 
              number: 8080
